2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* EditorWindow.cs: Changed the handling of the OnSaveAs and OnOpen
	  events for the EditorWindow.
	* gtk-gui/Monodoc.Editor.SaveDocDialog.cs, gtk-gui/gui.stetic,
	  SaveDocDialog.cs: Added basic handlers for events in SaveDocDialog.
	* OpenDocDialog.cs: Using Respond method to send result of the dialog.

2007-06-21  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/EditorWindow.cs: Added handlers for Save and SaveAs
	  actions.
	* Monodoc.Editor/Monodoc.Editor.mdp,
	  Monodoc.Editor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  Monodoc.Editor/gtk-gui/Monodoc.Editor.SaveDocDialog.cs,
	  Monodoc.Editor/gtk-gui/gui.stetic, Monodoc.Editor/SaveDocDialog.cs:
	  Added two new actions: Save and Save As. Added a new dialog for
	  Save As action.
	* Monodoc.Editor/OpenDocDialog.cs: Whitespace changes.
	
2007-06-20  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* gtk-gui/Monodoc.Editor.EditorWindow.cs, gtk-gui/gui.stetic: Made the
	  window appear in the center of the display and changed the wrap of
	  the view to wrap by word.

2007-06-19  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* EditorWindow.cs: Testing Serialize method.
	* gtk-gui/Monodoc.Editor.EditorWindow.cs, gtk-gui/gui.stetic: Added a
	  toolbar to the main window.
	* gtk-gui/Monodoc.Editor.OpenDocDialog.cs: Minor change.

2007-06-16  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>

	* Monodoc.Editor.mdp: Change from MonodocEditor.mdp to Monodoc.Editor.mdp
