@@ -1,3 +1,10 @@
+2007-06-28  Hector E. Gomez Morales <hectoregm@gmail.com> 
+
+	* EditorWindow.cs, gtk-gui/Monodoc.Editor.EditorWindow.cs,
+	  gtk-gui/gui.stetic: Added a notebook to get "tab" functionality in
+	  the editor, each page in the notebook will be a DocumentTab ie an
+	  editor for each document.
+
 2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 
 
 	* EditorWindow.cs: Changed the handling of the OnSaveAs and OnOpen
